Bad motion blur from alembic animation import in v2.92. Works as expected in v2.83.13 #86654

Closed
opened 2021-03-17 07:59:32 +01:00 by Mario Orlando · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: 2.83.13, branch: master, commit date: 2021-03-09 07:21, hash: bb50046730

Short description of error
Motion blur from alembic animation file is not correct in v2.92. Works as expected in v2.83.13

Exact steps for others to reproduce the error

  1. Exported alembic animation from Maya
  2. Imported the file into Blender 2.92.0
  3. Render with Eevee or Cycles
  4. Motion blur looks off
  5. Open the same file in Blender 2.83
  6. Render and it looks correct
  7. Save the same file from v2.83
  8. Open the same file in 2.92 and it now looks correct in 2.92

Something seems to be happening on import that is not set correctly. Just opening the same file in 2.83 seems and resaving using that version, seems to fix it whatever is broken. When I open the file back in 2.92 is fine from that point forward.
Blender2_92_MotionBlur.png v2.92
Blender2_83_13_MotionBlur.png v2.83

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: 2.83.13, branch: master, commit date: 2021-03-09 07:21, hash: `bb50046730` **Short description of error** Motion blur from alembic animation file is not correct in v2.92. Works as expected in v2.83.13 **Exact steps for others to reproduce the error** 1. Exported alembic animation from Maya 2. Imported the file into Blender 2.92.0 3. Render with Eevee or Cycles 4. Motion blur looks off 5. Open the same file in Blender 2.83 6. Render and it looks correct 7. Save the same file from v2.83 8. Open the same file in 2.92 and it now looks correct in 2.92 Something seems to be happening on import that is not set correctly. Just opening the same file in 2.83 seems and resaving using that version, seems to fix it whatever is broken. When I open the file back in 2.92 is fine from that point forward. ![Blender2_92_MotionBlur.png](https://archive.blender.org/developer/F9895948/Blender2_92_MotionBlur.png) **v2.92** ![Blender2_83_13_MotionBlur.png](https://archive.blender.org/developer/F9895977/Blender2_83_13_MotionBlur.png) **v2.83**
Author

Added subscriber: @MarioAOrlando

Added subscriber: @MarioAOrlando
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Just to make sure: could you share the .abc and your example .blend file?

Just to make sure: could you share the .abc and your example .blend file?
Author

Sure, here are the files.
MotionBlur_issue.blend

camera.abc

geometry.abc

Sure, here are the files. [MotionBlur_issue.blend](https://archive.blender.org/developer/F9896873/MotionBlur_issue.blend) [camera.abc](https://archive.blender.org/developer/F9896874/camera.abc) [geometry.abc](https://archive.blender.org/developer/F9896875/geometry.abc)
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Might be related to b5dcf74636.

Can confirm, will check. Might be related to b5dcf74636.
Philipp Oeser self-assigned this 2021-04-01 16:26:15 +02:00
Member

Vertex interpolation option introduced in bab2260b59 was defaulting to ON (correct) in that commit, but was lost in 8398050695
So if you have a file that was (incorrectly) imported with a version after 8398050695 you'll have to enable Vertex Interpolation option on every MeshSequenceCache modifier by hand.

Fix incoming.

Vertex interpolation option introduced in bab2260b59 was defaulting to ON (correct) in that commit, but was lost in 8398050695 So if you have a file that was (incorrectly) imported with a version after 8398050695 you'll have to enable Vertex Interpolation option on every `MeshSequenceCache` modifier by hand. Fix incoming.

This issue was referenced by fcc3227efd

This issue was referenced by fcc3227efd837de2733dd79d9f8baf9c3b6d01a8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86654
No description provided.